fix: update margin-bottom for medium-widget iframe for consistent spacing

--- a/css/medium.css
+++ b/css/medium.css
@@ -87,7 +87,7 @@
     .medium-widget iframe {
         width: 100%;
         height: 1500px;
-        margin-bottom: 5vh;
+        margin-bottom: 5rem;
     }   
     
 }
